# alexdavydov.github.io

./: .gitignore  .lychee.toml  404.html  ARCHITECTURE_PATTERNS.md  CLAUDE.md  CNAME  COURSE_EXTRACT.md  COURSE_STRUCTURE.md  DESIGN.md  DESIGN_PATTERNS.md  ENTITY_REGISTRY_DAVYDOVMY.md  FIX_PLAN.md  GLOSSARY.md  INTERNALS.md  PAGES_PUBLISH_AUDIT.md  PROJECT_STRUCTURE.md  README.md  REDESIGN.md  STRUCTURE_ANALYSIS.md  STYLE_GUIDE_CURSOR.md  Untitled  design-system.md  index.html  lychee.toml  main.js  robots.txt  sitemap.xml  style.css  working-protocol.md
_archive/: FIX_PLAN-completed-2026-04.md  REDESIGN-original-plan-2026-04.md  about-pre-rewrite-2026-04-30.html  calculators-index-pre-swiss-2026-05-03.html  career-pre-rewrite-2026-04-30.html  career-results-pre-rewrite-2026-04-30.html  cases-nloto-portfolio-pre-swiss-2026-05-01.html  competencies-levels-pre-css-rewrite-2026-05-01.html  knowledge-competencies-pre-swiss-2026-05-01.html  knowledge-pre-redirect-2026-05-01.html  lab-index-pre-redirect-2026-04-30.html
_source/: test-tasks.v1.csv
about/: index.html
analytics-resources/: index.html
approach/: index.html
assets/: base.css  (+6 more)
cases/solvery-mentors/: README.md  build_case_artifacts.py  charts.js  detect_endpoint.py  index.html  pyproject.toml  requirements.txt  solvery_analysis.ipynb  solvery_extractor.py  solvery_mentors.csv  solvery_mentors_with_category.csv  summary.json  verify_final_elements.py  verify_final_sections.py  verify_missing_sections.py  verify_new_charts.py  verify_russian.py  verify_section07.py  verify_table.py  verify_text_changes.py
(+753 files in other folders)
