[project]
name = "solvery-research"
version = "0.1.0"
description = "Data extraction and analytics pipeline for the Solvery mentors catalog."
requires-python = ">=3.11"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL"]

[tool.ruff.lint.pylint]
max-branches = 15
max-statements = 60

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
